--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
+
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
